data/cloudformation_collected_templates_new/template_05424_vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploy a basic VPC with required subnets
Parameters:
    AvailabilityZone:
        Description: Availability Zone
        Type: AWS::EC2::AvailabilityZone::Name
    Environment:
        Description: Environment
        Type: String
    EnableFlowLogs:
        Description: Enable VPC Flow Logs
        Type: String
    FlowLogsRole:
        Type: String

Conditions:
    EnableFlowLogs: !Equals [ !Ref EnableFlowLogs, 'Yes' ]
      
Mappings:
    SubnetConfig:
        VPC:
            DEV: 10.0.0.0/24
        Public:
            DEV: 10.0.0.0/25
        Private:
            DEV: 10.0.0.128/25

Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !FindInMap [SubnetConfig, VPC, !Ref Environment]
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
              - Key: Name
                Value: !Join ["-", [ACME, !Ref Environment]]
              - Key: Environment
                Value: !Ref Environment
    PublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !FindInMap [SubnetConfig, Public, !Ref Environment]
            AvailabilityZone: !Ref AvailabilityZone
            VpcId: !Ref VPC
            MapPublicIpOnLaunch: true
            Tags:
              - Key: Name
                Value: !Join ["-", [ACME, !Ref Environment, Public]]
              - Key: Environment
                Value: !Ref Environment
    PrivateSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !FindInMap [SubnetConfig, Private, !Ref Environment]
            AvailabilityZone: !Ref AvailabilityZone
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Join ["-", [ACME, !Ref Environment, Private]]
              - Key: Environment
                Value: !Ref Environment
    IGW:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
              - Key: Name
                Value: !Join ["-", [ACME, !Ref Environment, IGW]]
              - Key: Environment
                Value: !Ref Environment
    RouteTableMain:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Join ["-", [ACME, !Ref Environment, Public]]
    EIPNat:
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc
    NATGateway:
        Type: AWS::EC2::NatGateway
        DependsOn: IGW
        Properties:
            AllocationId: !GetAtt EIPNat.AllocationId
            SubnetId: !Ref PublicSubnet
    RouteIGW:
        Type: AWS::EC2::Route
        DependsOn: GWAttachmentIGW
        Properties:
            RouteTableId: !Ref RouteTableMain
            GatewayId: !Ref IGW
            DestinationCidrBlock: 0.0.0.0/0
    RoutePrivateNatGateway:
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId: !Ref RouteTablePrivate
            NatGatewayId: !Ref NATGateway
    RouteAssocPublic:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref RouteTableMain
            SubnetId: !Ref PublicSubnet
    PrivateSubnetAssoc:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref RouteTablePrivate
            SubnetId: !Ref PrivateSubnet
    RouteTablePrivate:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Join ["-", [ACME, !Ref Environment, Private]]
    GWAttachmentIGW:
        Type: AWS::EC2::VPCGatewayAttachment
        DependsOn: IGW
        Properties:
            VpcId: !Ref VPC
            InternetGatewayId: !Ref IGW
    VpcFlowLog:
        Condition: EnableFlowLogs
        Type: AWS::EC2::FlowLog
        Properties:
            DeliverLogsPermissionArn: !Ref FlowLogsRole
            LogGroupName: !Join [ -, [ flowlogs, !Ref VPC ] ]
            ResourceId: !Ref VPC
            ResourceType: VPC
            TrafficType: ALL
Outputs:
    VpcId:
        Value: !Ref VPC
    PublicSubnet:
        Value: !Ref PublicSubnet
    PrivateSubnet:
        Value: !Ref PrivateSubnet
    RouteTablePublic:
        Value: !Ref RouteTableMain
    RouteTablePrivate:
        Value: !Ref RouteTablePrivate
